force-app/main/default/objects/Application_Parameters__mdt/Application_Parameters__mdt.object-meta.xml
<CustomObject>
    <description>MDT to store parameters for application</description>
    <label>Application Parameter</label>
    <pluralLabel>Application Parameters</pluralLabel>
</CustomObject>