force-app/main/default/objects/Application_Parameters__mdt/fields/Coupon_Expiry_Period__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Expiry_Period__c</fullName>
    <label>Coupon Expiry Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>