force-app/main/default/objects/Application_Parameters__mdt/fields/Credit_Balance_Low_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Balance_Low_Limit__c</fullName>
    <label>Credit Balance Low Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>