force-app/main/default/objects/Application_Parameters__mdt/fields/Mileage_to_Amount_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Mileage_to_Amount_Conversion__c</fullName>
    <label>Mileage to Amount Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>